<resources>
    <string name="app_name">檀熠</string>
    <string name="version">v1.0.0</string>
    <string name="favorite">我的收藏</string>
    <string name="add_to_shopping_car">加入购物车</string>
    <string name="delete">删除</string>
    <string name="my_order">我的订单</string>
    <string name="message">消息列表</string>
    <string name="user_center">个人中心</string>
    <string name="logistics">物流信息</string>
    <string name="order_detai">订单详情</string>
    <string name="wait_for_pay">等待付款</string>
    <string name="account_manager">账号设置</string>
    <string name="account_manager_logout">退出登录</string>
    <string name="address_manager">地址管理</string>
    <string name="about">关于</string>
    <string name="clear_cache">清除缓存</string>
    <string name="user_info">个人信息</string>
    <string name="user_icon">头像</string>
    <string name="user_nickname">昵称</string>
    <string name="user_sex">性别</string>
    <string name="user_birthday">生日</string>
    <string name="un_fill_in">未填写</string>
    <string name="auth_notice">授权须知</string>
    <string name="private_licence">隐私条款</string>
    <string name="add_address">新增收货地址</string>
    <string name="add_address_confirm">确定</string>
    <string name="wechat">微信</string>
    <string name="friend_group">朋友圈</string>
    <string name="size">规格参数</string>
    <string name="detail_show">细节展示</string>
    <string name="brand_story">品牌故事</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="true_tag">true</string>
    <string name="false_tag">false</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="actionBar_edit">编辑</string>
    <string name="all">全选</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="comm_price_format">¥ %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hot_search">热门搜索</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="listview_loading">正在加载</string>
    <string name="login_name">登录</string>
    <string name="my_address">地址</string>
    <string name="my_all_appointment">查看全部预约</string>
    <string name="my_all_shopping">查看全部购物</string>
    <string name="my_appointment">其他服务</string>
    <string name="my_collect">收藏</string>
    <string name="my_comment">待评价</string>
    <string name="my_commission">推荐产品</string>
    <string name="my_msg_center">消息中心</string>
    <string name="my_payment">待付款</string>
    <string name="my_refund">退款/售后</string>
    <string name="my_shopping">我的购物</string>
    <string name="my_shopping_cart">购物车</string>
    <string name="my_take_delivery">待收货</string>
    <string name="my_use">待使用</string>
    <string name="my_use_hlep">使用帮助</string>
    <string name="nomore_loading">没有了</string>
    <string name="open">Open</string>
    <string name="order_total">合计 :</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_fail_wait">支付结果确认中</string>
    <string name="pay_succ">支付成功</string>
</resources>