<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UserInfoActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/user_info_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon_left="@mipmap/back"
        app:title="@string/user_info"
        app:title_right="保存"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200"
        android:padding="@dimen/dimen_10_dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/user_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/mid_layout"
                    android:onClick="onUserIconLayoutClick">

                    <TextView
                        style="@style/usertext"
                        android:text="@string/user_icon"/>

                    <ImageView
                        android:id="@+id/user_icon"
                        android:layout_width="@dimen/dimen_40_dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="@dimen/dimen_10_dp"
                        android:src="@mipmap/user_default_icon"/>

                    <ImageView style="@style/img_arrow"/>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/line_view"/>

            <LinearLayout
                style="@style/mid_layout"
                android:onClick="onUserNickLayoutClick">

                <TextView
                    style="@style/usertext"
                    android:text="@string/user_nickname"/>

                <TextView
                    android:id="@+id/user_nick_name"
                    style="@style/arrow_left_text"
                    android:text="@string/un_fill_in"/>

                <ImageView style="@style/img_arrow"/>
            </LinearLayout>

            <include layout="@layout/line_view"/>

            <LinearLayout
                style="@style/mid_layout"
                android:onClick="onUserSexLayoutClick">

                <TextView
                    style="@style/usertext"
                    android:text="@string/user_sex"/>

                <TextView
                    android:id="@+id/user_sex"
                    style="@style/arrow_left_text"
                    android:text="@string/un_fill_in"/>

                <ImageView style="@style/img_arrow"/>
            </LinearLayout>

            <include layout="@layout/line_view"/>

            <LinearLayout
                style="@style/mid_layout"
                android:onClick="onUserBirthDayLayoutClick">

                <TextView
                    style="@style/usertext"
                    android:text="@string/user_birthday"/>

                <TextView
                    android:id="@+id/user_birthday"
                    style="@style/arrow_left_text"
                    android:text="@string/un_fill_in"/>

                <ImageView style="@style/img_arrow"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>