<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#fff">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bottom_dialog_comfirm_btn"
            android:background="@color/black"
            android:text="确定"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50_dp"/>

        <LinearLayout
            android:layout_above="@+id/shopping_dialog_comfirm_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_10_dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/top_layout"
                android:tag="@string/false_tag"
                android:layout_width="match_parent"
                android:padding="@dimen/dimen_10_dp"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/dialog_custom_top_tv"
                    style="@style/WrapWrap"
                    android:textColor="@color/grey"
                    android:layout_centerVertical="true"
                    android:text="@string/male"/>
                <ImageView
                    android:layout_width="@dimen/dimen_15_dp"
                    android:layout_height="@dimen/dimen_15_dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/right_icon"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bottom_layout"
                android:background="@color/home_glod_text_select"
                android:layout_width="match_parent"
                android:padding="@dimen/dimen_10_dp"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/dialog_custom_bottom_tv"
                    style="@style/WrapWrap"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    android:text="@string/female"/>
                <ImageView
                    android:layout_width="@dimen/dimen_15_dp"
                    android:layout_height="@dimen/dimen_15_dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/right_icon"/>
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>