<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">

    <LinearLayout
        android:background="@color/grey_200"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <com.hjq.bar.TitleBar
                    app:icon_left="@mipmap/back"
                    android:id="@+id/about_title_bar"
                    app:title="@string/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:layout_marginTop="@dimen/dimen_40_dp"
                    android:layout_marginBottom="@dimen/dimen_20_dp"
                    style="@style/WrapWrap"
                    android:src="@mipmap/for_one_icon"/>

                <LinearLayout
                    android:layout_marginLeft="@dimen/dimen_10_dp"
                    android:layout_marginRight="@dimen/dimen_10_dp"
                    android:onClick="onAuthNoticeLayoutClick"
                    style="@style/mid_layout"
                    android:layout_marginTop="@dimen/dimen_10_dp">

                    <TextView
                        style="@style/usertext"
                        android:text="@string/auth_notice"/>

                    <ImageView style="@style/img_arrow"/>
                </LinearLayout>

                <include layout="@layout/line_view"/>

                <LinearLayout
                    android:layout_marginLeft="@dimen/dimen_10_dp"
                    android:layout_marginRight="@dimen/dimen_10_dp"
                    android:onClick="onPrivateLicenceLayoutClick"
                    style="@style/mid_layout">

                    <TextView
                        style="@style/usertext"
                        android:text="@string/private_licence"/>

                    <ImageView style="@style/img_arrow"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/about_version"
                    android:layout_centerHorizontal="true"
                    android:text="当前版本：v3.0.0"
                    android:textColor="#7a7a7b"
                    android:layout_marginBottom="@dimen/dimen_20_dp"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>